tests/baselines/reference/isolatedDeclarationErrors.errors.txt
isolatedDeclarationErrors.ts(2,1): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
isolatedDeclarationErrors.ts(2,1): error TS9023: Assigning properties to functions without declaring them is not supported with --isolatedDeclarations. Add an explicit declaration for the properties assigned to this function.
isolatedDeclarationErrors.ts(4,7): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
isolatedDeclarationErrors.ts(7,7): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.


==== isolatedDeclarationErrors.ts (4 errors) ====
    function errorOnAssignmentBelowDecl(): void {}
    errorOnAssignmentBelowDecl.a = "";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS9023: Assigning properties to functions without declaring them is not supported with --isolatedDeclarations. Add an explicit declaration for the properties assigned to this function.
    
    const errorOnAssignmentBelow = (): void => {}
          ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrors.ts:4:7: Add a type annotation to the variable errorOnAssignmentBelow.
    errorOnAssignmentBelow.a = "";
    
    const errorOnMissingReturn = () => {}
          ~~~~~~~~~~~~~~~~~~~~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrors.ts:7:7: Add a type annotation to the variable errorOnMissingReturn.
    errorOnMissingReturn.a = "";
    